# routes/guestRoutes.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const guestController = require('../controllers/guestController');
 
-// Bulk add guests
+// Bulk add guests by username
 router.post('/bulk', guestController.bulkAddGuests);
 
 // Get guest by token
