# routes/userRoutes.js
@@ -1,0 +1,11 @@
+const express = require('express');
+const router = express.Router();
+const userController = require('../controllers/userController');
+
+// Signup
+router.post('/signup', userController.signup);
+
+// Login
+router.post('/login', userController.login);
+
+module.exports = router;
